--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,8 +56,8 @@ play.modules {
   # By default, Play will load any class called Module that is defined
   # in the root package (the "app" directory), or you can define them
   # explicitly below.
-  # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
+  enabled += "modules.SecurityModule"
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
@@ -125,6 +125,7 @@ play.http {
   # Defaults to "Filters" in the root package (aka "apps" folder)
   # Alternatively you can explicitly register a class here.
   #filters = my.application.Filters
+  filters = filters.Filters
 
   ## Session & Flash
   # https://www.playframework.com/documentation/latest/JavaSessionFlash
@@ -197,6 +198,11 @@ play.ws {
     #    { type = "JKS", path = "exampletrust.jks" }
     #  ]
     #}
+    trustManager = {
+      stores = [
+        { path: ${java.home}/jre/lib/security/cacerts, password = "changeit" } # Default trust store
+      ]
+    }
   }
 }
 
@@ -355,3 +361,9 @@ db {
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
  
 mongodb.uri = "mongodb://localhost:27017/getting-started-play-scala"
+
+pac4j.security.rules = [
+  {"/api/.*" = {
+    authorizers = "_authenticated_"
+  }}
+]
