Split authentication-specific actions from widget actions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -364,6 +364,7 @@ mongodb.uri = "mongodb://localhost:27017/getting-started-play-scala"
 
 pac4j.security.rules = [
   {"/api/.*" = {
-    authorizers = "_authenticated_"
+    # Use the custom "email" authorizer from authorizers.EmailAuthorizer
+    authorizers = "email"
   }}
 ]
