Added proxy server example

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -200,7 +200,7 @@ play.ws {
     #}
     trustManager = {
       stores = [
-        { path: ${java.home}/jre/lib/security/cacerts, password = "changeit" } # Default trust store
+        { path: ${java.home}/lib/security/cacerts, password = "changeit" } # Default trust store
       ]
     }
   }
@@ -363,8 +363,28 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 mongodb.uri = "mongodb://localhost:27017/getting-started-play-scala"
 
 pac4j.security.rules = [
+  {"/" = {
+    authorizers = "_anonymous_"
+  }}
+  {"/login.*" = {
+    authorizers = "_anonymous_"
+  }}
+  {"/logout.*" = {
+    authorizers = "_anonymous_"
+  }}
+  {"/callback?.*" = {
+    authorizers = "_anonymous_"
+  }}
   {"/api/.*" = {
     # Use the custom "email" authorizer from authorizers.EmailAuthorizer
     authorizers = "email"
   }}
+  {"/.*" = {
+    # Use the custom "email" authorizer from authorizers.EmailAuthorizer
+    authorizers = "email"
+  }}
 ]
+
+proxy = {
+  backend_server = "http://www.tmwong.org"
+}
